--- a/contact-us.html
+++ b/contact-us.html
@@ -89,7 +89,7 @@
                 <ul>
                     <li><i class="icon-telephone114"></i> Tel: (55) 5206 2240</li>
                     <li><i class="icon-icons74"></i>Viveros de Coyoacán 64</li>
-                    <li><i class="icon-icons20"></i> Lun a Sab 09:00 - 18:00</li>
+                    <li><i class="icon-icons20"></i> Lun a Sáb 09:00 - 18:00</li>
                 </ul>
             </div>
             <!-- / TOP BAR -->
@@ -147,13 +147,13 @@
     <section class="subpage-header">
         <div class="container">
             <div class="site-title clearfix">
-                <h2>Contactanos</h2>
+                <h2>Contáctanos</h2>
                 <ul class="breadcrumbs">
                     <li><a href="#.">Home</a></li>
-                    <li>Contactanos</li>
+                    <li>Contáctanos</li>
                 </ul>
             </div>
-            <a href="contact-us.html" class="btn btn-primary get-in-touch" data-text="Contactanos"><i class="icon-telephone114"></i>Contactanos</a>
+            <a href="contact-us.html" class="btn btn-primary get-in-touch" data-text="Contáctanos"><i class="icon-telephone114"></i>Contáctanos</a>
         </div>
     </section>
 
@@ -186,7 +186,7 @@
                             </div>
                         </div>
                         <textarea data-delay="500" class="required valid" placeholder="Mensaje" name="message" id="message"></textarea>
-                        <button class="btn btn-primary" name="" type="submit" data-text="Contactanos" onClick="validateContact();">Contactanos</button>
+                        <button class="btn btn-primary" name="" type="submit" data-text="Enviar" onClick="validateContact();">Enviar</button>
                     </form>
 
 
