--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                 <ul>
                     <li><i class="icon-telephone114"></i> Tel: (55) 5206 2240</li>
                     <li><i class="icon-icons74"></i>Viveros de Coyoacán 64</li>
-                    <li><i class="icon-icons20"></i> Lun a Sab 09:00 - 18:00</li>
+                    <li><i class="icon-icons20"></i> Lun a Sáb 09:00 - 18:00</li>
                 </ul>
             </div>
             <!-- / TOP BAR -->
@@ -152,20 +152,17 @@
 
 
 
-
-
-
-
     <!-- MAIN BANNER -->
     <section class="cd-hero">
         <ul class="cd-hero-slider autoplay">
             <li class="selected">
                 <div class="cd-full-width">
                     <div class="container">
-                        <h2>Nos interesan<br>tus opiniones<span class="color-default"></span></h2>
+                        <!-- <h2>Nos interesan<br>tus opiniones<span class="color-default"></span></h2> -->
+                        <h2>Bienvenido a Starkend<span class="color-default"></span></h2>
                         <p>Ofrecemos distribución de producos en toda la republica</p>
                         <a href="about-us.html" class="btn btn-primary" data-text="Leer más">Leer más</a>
-                        <a href="contact-us.html" class="btn btn-default" data-text="Contactanos">Contactanos</a>
+                        <a href="contact-us.html" class="btn btn-default" data-text="Contáctanos">Contáctanos</a>
                     </div>
                 </div>
             </li>
@@ -175,7 +172,7 @@
                     <div class="container">
                         <h2>Experiencia<span class="color-default"> amigable</span></h2>
                         <p>Manejamos los productos de las marcas OVVO y LOCKDOWEL</p>
-                        <a href="contact-us.html" class="btn btn-default" data-text="contactanos">contactanos<i class="fas fa-badger-honey"></i></a>
+                        <a href="contact-us.html" class="btn btn-default" data-text="contáctanos">contáctanos<i class="fas fa-badger-honey"></i></a>
                     </div>
                 </div>
             </li>
@@ -243,7 +240,7 @@
                     <div class="height-10"></div>
                     <p>Tenemos 15 años de experiencia en ditribución y manejo de productos relacionados con la construcción de stands muebles de exibición y mucho más. </p>
                     <div class="height-10"></div>
-                    <p>te ofremos productos de la marca OVVO y LOCKDOWEL.</p>
+                    <p>Te ofremos productos de la marca OVVO y LOCKDOWEL.</p>
                     <div class="height-20"></div>
                     <a href="about-us.html" class="btn btn-bordered-dark" data-text="leer más">leer más</a>
                     <div class="height-40"></div>
@@ -269,11 +266,11 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-9">
-                    <h4 class=" animate fadeInLeft">Si tienes cualquier pregunta realacionada... Estamos disponibles</h4>
+                    <h4 class=" animate fadeInLeft">Si tienes cualquier pregunta relacionada... Estamos disponibles.</h4>
                 </div>
                 <div class="col-md-3">
                     <div class="text-right">
-                        <a href="contact-us.html" class="btn btn-primary get-in-touch animate fadeInRight" data-text="Contactanos"><i class="icon-telephone114"></i>Contactanos</a>
+                        <a href="contact-us.html" class="btn btn-primary get-in-touch animate fadeInRight" data-text="Contáctanos"><i class="icon-telephone114"></i>Contáctanos</a>
                     </div>
                 </div>
             </div>
