--- a/productos2.html
+++ b/productos2.html
@@ -94,7 +94,7 @@
                 <ul>
                     <li><i class="icon-telephone114"></i> Tel: (55) 5206 2240</li>
                     <li><i class="icon-icons74"></i>Viveros de Coyoacán 64</li>
-                    <li><i class="icon-icons20"></i> Lun a Sab 09:00 - 18:00</li>
+                    <li><i class="icon-icons20"></i> Lun a Sáb 09:00 - 18:00</li>
                 </ul>
             </div>
             <!-- / TOP BAR -->
@@ -159,7 +159,7 @@
                     <li>Productos LOCKDOWEL</li>
                 </ul>
             </div>
-            <a href="contact-us.html" class="btn btn-primary get-in-touch" data-text="Contactanos"><i class="icon-telephone114"></i>Contactanos</a>
+            <a href="contact-us.html" class="btn btn-primary get-in-touch" data-text="Contáctanos"><i class="icon-telephone114"></i>Contáctanos</a>
         </div>
     </section>
 
@@ -324,7 +324,7 @@
                 </div>
                 <div class="col-md-3">
                     <div class="text-right">
-                        <a href="contact-us.html" class="btn btn-primary get-in-touch animate fadeInRight" data-text="Contactanos"><i class="icon-telephone114"></i>Contactanos</a>
+                        <a href="contact-us.html" class="btn btn-primary get-in-touch animate fadeInRight" data-text="Contáctanos"><i class="icon-telephone114"></i>Contáctanos</a>
                     </div>
                 </div>
             </div>
