carousel más pequño

--- a/index.html
+++ b/index.html
@@ -158,9 +158,10 @@
             <li class="selected">
                 <div class="cd-full-width">
                     <div class="container">
-                        <!-- <h2>Nos interesan<br>tus opiniones<span class="color-default"></span></h2> -->
-                        <h2>Bienvenido a Starkend<span class="color-default"></span></h2>
-                        <p>Ofrecemos distribución de producos en toda la republica</p>
+                        <h2>Nos interesan tus opiniones<span class="color-default"></span></h2>
+                        <p>Ofrecemos distribución de producos en toda la república</p>
+                        <!-- <h2>Bienvenido a Starkend<span class="color-default"></span></h2> -->
+                        <!-- <p>Tenemos 15 años de experiencia en ditribución y manejo de productos relacionados con la construcción de stands muebles de exibición y mucho más. </p> -->
                         <a href="about-us.html" class="btn btn-primary" data-text="Leer más">Leer más</a>
                         <a href="contact-us.html" class="btn btn-default" data-text="Contáctanos">Contáctanos</a>
                     </div>
