--- a/about-us.html
+++ b/about-us.html
@@ -86,7 +86,7 @@
                 <ul>
                     <li><i class="icon-telephone114"></i> Tel: (55) 5206 2240</li>
                     <li><i class="icon-icons74"></i>Viveros de Coyoacán 64</li>
-                    <li><i class="icon-icons20"></i> Lun a Sáb 09:00 - 18:00</li>
+                    <li><i class="icon-icons20"></i>Horario de 9 am a 6 pm</li>
                 </ul>
             </div>
             <!-- / TOP BAR -->
@@ -105,7 +105,7 @@
                         <li><a href="index.html">Home</a></li>
 
                         <li><a href="about-us.html">Nosotros</a></li>
-                        <li class="dropdown"><a href="#.">Marcas <i class="fa fa-caret-down"></i></a>
+                        <li class="dropdown"><a href="#.">Productos <i class="fa fa-caret-down"></i></a>
                             <ul class="dropdown-menu">
                                 <li class="dropdown-submenu"><a href="productos.html">OVVO <i class="fa fa-caret-right"></i></a>
                                     <ul class="dropdown-menu">
